Fix gallery description overflow

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -13,7 +13,11 @@
     }
 
   &__description {
-    grid-column: span 3;
+    grid-column: span 2;
+
+    @include for-tablet {
+      grid-column: span 3;
+    }
 
     @include for-desktop {
       grid-column: span 2;
